--- a/Lab#1_Estructura_De_Datos/nbproject/project.properties
+++ b/Lab#1_Estructura_De_Datos/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Lab_1_Estructura_De_Datos
-main.class=lab1._estructura_de_datos.Archivo_pacientes
+main.class=lab1._estructura_de_datos.Datos20
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
