--- a/EstructuraDeDatosLab#1/nbproject/project.properties
+++ b/EstructuraDeDatosLab#1/nbproject/project.properties
@@ -47,8 +47,7 @@ javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
 javac.modulepath=\
-    ${libs.FX21.classpath}:\
-    ${libs.gluon.classpath}
+    ${libs.FX21.classpath}
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
