--- a/EstructuraDeDatosLab#1/nbproject/project.properties
+++ b/EstructuraDeDatosLab#1/nbproject/project.properties
@@ -35,13 +35,9 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/EstructuraDeDatosLab_1
 endorsed.classpath=
 excludes=
-file.reference.fontawesomefx-8.2.jar=/Users/alexysalcedo/Downloads/fontawesomefx-8.2.jar
-file.reference.fontawesomefx-8.9.jar=/Users/alexysalcedo/Downloads/fontawesomefx-8.9.jar
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${file.reference.fontawesomefx-8.9.jar}:\
-    ${file.reference.fontawesomefx-8.2.jar}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
